...
  const HomePage({required this.presenter, Key? key}) : super(key: key);

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Tarefas'),
        actions: [
          IconButton(
            onPressed: presenter.showConfirmationLogout,
            icon: const Icon(Icons.exit_to_app),
            tooltip: 'Deslogar',
          )
...
